--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "webdriver-update": "./node_modules/.bin/webdriver-manager update",
     "webdriver-start": "./node_modules/.bin/webdriver-manager start",
-    "protractor": "./node_modules/.bin/protractor configuration.js",
-    "SmokeSuite": "./node_modules/.bin/protractor configuration.js --suite Smoke",
-    "Regression": "./node_modules/.bin/protractor configuration.js --suite Regression",
+    "protractor": "./node_modules/.bin/protractor config.js",
+    "SmokeSuite": "./node_modules/.bin/protractor config.js --suite Smoke",
+    "Regression": "./node_modules/.bin/protractor config.js --suite Regression",
     "start": "npm run webdriver-update &&npm run webdriver-start "
   },
   "dependencies": {
